# TopMonitoring-linux

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  style.css  topmonitoring.desktop  uninstall.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: TECHNICAL.md
src/: config.rs  main.rs  main.rs.crdownload
